--- a/templates/drag_and_drop_detect.html
+++ b/templates/drag_and_drop_detect.html
@@ -15,7 +15,7 @@ TODO:
 
 {% extends "layout.html" %}
 
-{% block title %} <title>YOLOv5 Drag & Drop Demo</title> {% endblock %}
+{% block title %} <title>얄약 사진 찍기</title> {% endblock %}
 
 {% block header %}
 <!-- Include JQuery for this page -->
