--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,7 @@
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">YOLOv5-FastAPI-Demo</a>
+    <a class="navbar-brand" href="#">사진 한장으로 알약 판별하기</a>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item"> 
